# cle_assignments_2425

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  generate_weather_samples.sh  in.txt  run_weather_stations_st.sh  run_word_count_st.sh
books/: 11299.txt  12579.txt  13092.txt  13093.txt  13630.txt  14296.txt  14503.txt  14620.txt  14621.txt  14622.txt  14904.txt  15047.txt  15668.txt  15674.txt  16111.txt  16214.txt  16218.txt  16219.txt  16384.txt  16385.txt  16425.txt  16428.txt  16429.txt  16443.txt  16571.txt  16633.txt  16922.txt  17005.txt  17036.txt  17177.txt  17186.txt  17193.txt  17503.txt  17515.txt  17534.txt  17591.txt  17610.txt  17639.txt  17895.txt  17927.txt  (+585 more)
multi_threaded/shared/: CMakeLists.txt  queue.hpp  threading.cpp  threading.hpp
multi_threaded/tests/: CMakeLists.txt  queueTest.cpp
multi_threaded/weather-stations/: CMakeLists.txt
multi_threaded/weather-stations/include/: datastructures.hpp
multi_threaded/weather-stations/src/: main.cpp  main.old.cpp
multi_threaded/word-count/: CMakeLists.txt
multi_threaded/word-count/src/: main.cpp  utf-8.cpp  utf-8.h  word_count.cpp
samples/: CMakeLists.txt
single_threaded/weather-stations/: CMakeLists.txt
single_threaded/word-count/src/: word_count.h
